Migrate from Java 8 to Java 15 with Spring Boot 2.7.18
Build & Dependency Changes:
- Update Spring Boot 2.0.2 -> 2.7.18
- Update Java version 1.8 -> 15
- Fix packaging from pom to jar
- Add maven-compiler-plugin with release 15
- Update Gradle plugin to 2.7.18, compile->implementation, testCompile->testImplementation
- Update baseName->archiveBaseName in Gradle bootJar
- Update Maven wrapper to 3.9.6, Gradle wrapper to 7.6.4
- Make gradlew/mvnw executable

Code Modernization (Java 15 features):
- Use text blocks for multi-line strings (SQL, response templates)
- Use var for local variable type inference
- Replace Arrays.asList() with List.of()
- Replace Paths.get() with Path.of()
- Use method references where possible (Topic::getId)

Bug Fixes (from branch submissions):
- Fix defunct external API URL (cfapps.io -> dummyjson.com)
- Add null safety and try-catch for external API calls
- Fix getTopicWithId to use orElse(null) instead of bare get()

README updated to reflect Java 15.

Co-Authored-By: parker.duff@codeium.com <pwjduff@gmail.com>